- UI:
	- Make the adjustable armor 'clamped' and 'triangle type' options persistent and initialised correctly in the PAW.
	- Adjust formatting of some debug telemetry.
- Vessel Mover:
	- Don't apply "Don't Avoid Collisions" while lowering vessels.
- Vessel Spawning:
	- Re-register EVA Kerbals in spawned vessels as active, since KSP de-registers this for some reason.
- Weapons:
	- APS turrets now function when GuardMode is off to let them work on player-operated craft.
	- Adds new 'dualModeAPS' field (default false) for APS turrets; if true, they can also be selected and used as standard weapons.
	- ABL/GoalKeepers/Oerlikon are now configured as dual-mode anti-missile APS.
	- Missiles:
		- Fix AI not selecting laser missiles.
		- SARH missiles now properly follow whatever the active locked radar target is.
- Competition:
	- Add some checks for lacking an AI or an airborne AI being landed/splashed to the scoring for being considered as wrecked (MIA).

v1.6.1.0
IMPROVEMENTS / FIXES
 - General:
	- Fix TweakScale config for Typhoon engine.
	- Reduce min size, scaling increment for procArmor panels.
	- Internal refactor of vessel spawning/moving.
	- EAS-2 External Combat Seat now has a unique model(credit: Eclipse) to help differentiate it from the stock EAS-1. 
- UI:
	- Maintain the camera angle and distance when switching vessels with the Vessel Switcher (page up/down).
- Vessel Mover:
	- Abort vessel selection and reset state when closing/hiding the VM window.
- Vessel Spawning:
	- Use the better Vessel Mover lowering routines to lower spawned craft to the terrain. 'Ease-in Speed' is now the same as 'Min Lower Speed' in VM.
	- Fix the black screen caused by an invalid camera target during custom template spawning.
	- Maintain the camera angle when switching to spawn locations.
	- Also maintain the camera distance if bringing the current vessel with us when switching to spawn locations.
- AI:
	- Lower the minimum extend abort time to 1s.