@@ -244,6 +244,7 @@ namespace BDArmory.VesselSpawning
         /// </summary>
         public void SaveTemplate()
         {
+            if (LoadedVesselSwitcher.Instance.WeaponManagers.Count == 0) return; // Safe-guard, don't save over an existing template when the slots are empty. 
             var geoCoords = FlightGlobals.currentMainBody.GetLatitudeAndLongitude(LoadedVesselSwitcher.Instance.WeaponManagers.SelectMany(tm => tm.Value).Select(wm => wm.vessel.transform.position).Aggregate(Vector3.zero, (l, r) => l + r) / LoadedVesselSwitcher.Instance.WeaponManagers.SelectMany(tm => tm.Value).Count()); // Set the central spawn location at the centroid of the craft.
             customSpawnConfig.worldIndex = BDArmorySettings.VESSEL_SPAWN_WORLDINDEX;
             customSpawnConfig.latitude = geoCoords.x;
@@ -268,6 +269,7 @@ namespace BDArmory.VesselSpawning
                 customSpawnConfig.customVesselSpawnConfigs.Add(teamConfigs);
                 ++teamCount;
             }
+            if (!customSpawnConfigs.Contains(customSpawnConfig)) customSpawnConfigs.Add(customSpawnConfig); // Add the template if it isn't already there.
             CustomSpawnTemplateField.Save();
             PopulateEntriesFromLVS(); // Populate the slots to show the layout.
         }
@@ -277,7 +279,7 @@ namespace BDArmory.VesselSpawning
         /// Vessel positions, rotations and teams are saved.
         /// </summary>
         /// <param name="templateName"></param>
-        public CustomSpawnConfig NewTemplate()
+        public CustomSpawnConfig NewTemplate(string templateName="")
         {
             // Remove any invalid or unnamed entries.
             customSpawnConfigs = customSpawnConfigs.Where(config => !string.IsNullOrEmpty(config.name) && config.customVesselSpawnConfigs.Count > 0).ToList();
@@ -285,7 +287,7 @@ namespace BDArmory.VesselSpawning
             // Then make a new one.
             var geoCoords = FlightGlobals.currentMainBody.GetLatitudeAndLongitude(LoadedVesselSwitcher.Instance.WeaponManagers.SelectMany(tm => tm.Value).Select(wm => wm.vessel.transform.position).Aggregate(Vector3.zero, (l, r) => l + r) / LoadedVesselSwitcher.Instance.WeaponManagers.SelectMany(tm => tm.Value).Count()); // Set the central spawn location at the centroid of the craft.
             customSpawnConfig = new CustomSpawnConfig(
-                "",
+                templateName,
                 new SpawnConfig(
                     worldIndex: BDArmorySettings.VESSEL_SPAWN_WORLDINDEX,
                     latitude: geoCoords.x,
